# cfd-2d

./: CMakeLists.txt  README.md
configs/: PCG_DILU.json  PCG_NOPREC.json
src/: bnd_cond.cpp  global.cpp  global.h  main.cpp
src/mesh/: MeshReader.cpp  MeshReader.h  MeshReaderBerkleyTriangle.cpp  MeshReaderGmsh.cpp  MeshReaderGmsh.h  grid.cpp
src/methods/: LimiterDGCockburn.cpp  fem_dg.h  fem_dg_implicit.cpp  fem_dg_implicit.h
src/methods/solvers/: Initializator.cpp  Initializator.h  MatrixSolver.h  SolverAMGX.cpp  SolverAMGX.h  SolverAMGXImpl.cpp
